--- a/src/components/LivePrice/LivePrice.css
+++ b/src/components/LivePrice/LivePrice.css
@@ -5,7 +5,7 @@
   align-items: flex-end;
   justify-content: end;
   width: 265px;
-  padding-bottom: 14px;
+  padding-bottom: 17px;
   border-bottom: 2px solid var(--core-secondary-3);
 }
 
@@ -70,7 +70,7 @@
 
   .live-container {
     width: 165px;
-    padding-bottom: 12px;
+    padding-bottom: 11px;
   }
 
   .live-price-error {
