--- a/src/components/LivePrice/loading.css
+++ b/src/components/LivePrice/loading.css
@@ -3,6 +3,7 @@
   justify-content: end;
   width: 265px;
   border-bottom: 2px solid var(--core-secondary-3);
+  margin-top: 19px;
 }
 
 .live-one {
@@ -42,5 +43,6 @@
 @media only screen and (max-width: 834px) {
   .live-loading {
     width: 165px;
+    margin-top: 0px;
   }
 }
